--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "discord-bot",
-  "version": "1.0.0",
-  "description": "",
+  "name": "anibot",
+  "version": "1.0.1",
+  "description": "A discord bot",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -12,11 +12,7 @@
   "dependencies": {
     "discord.js": "^14.7.1",
     "dotenv": "^16.0.3",
-    "eslint": "^8.31.0",
-    "license-checker": "^25.0.1",
-    "node-fetch": "^2.6.7",
     "nodemon": "^2.0.20",
-    "xml-js": "^1.6.11",
     "xml2js": "^0.4.23"
   }
 }
