--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "anibot",
-  "version": "1.0.2",
+  "version": "1.1.0",
   "description": "A discord bot",
   "main": "index.js",
   "scripts": {
@@ -12,7 +12,12 @@
   "dependencies": {
     "discord.js": "^14.7.1",
     "dotenv": "^16.0.3",
-    "nodemon": "^2.0.20",
-    "xml2js": "^0.4.23"
+    "mongodb": "^5.2.0",
+    "xml2js": "^0.5.0"
+  },
+  "devDependencies": {
+    "eslint": "^8.38.0",
+    "eslint-config-eslint": "^7.0.0",
+    "nodemon": "^2.0.20"
   }
 }
