--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "xml2js": "^0.5.0"
   },
   "devDependencies": {
+    "@types/node": "^18.15.11",
     "eslint": "^8.38.0",
     "eslint-config-eslint": "^7.0.0",
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "typescript": "^5.0.4"
   }
 }
