--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,9 @@
     "compilerOptions": {
         "outDir": "./dist",
         "allowJs": true,
-        "target": "es5",
+        "target": "ESNext",
+        "moduleResolution": "nodenext",
+        "module": "EsNext",
         "noFallthroughCasesInSwitch": true,
     },
     "include": [
