--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,9 +2,10 @@
     "compilerOptions": {
         "outDir": "./dist",
         "allowJs": true,
-        "target": "ESNext",
-        "moduleResolution": "NodeNext",
-        "module": "NodeNext",
+        "target": "ES2022",
+        "esModuleInterop": true,
+        "moduleResolution": "node",
+        "module": "CommonJS",
         "noFallthroughCasesInSwitch": true
     },
     "include": ["./src/**/*"]
